@@ -22,6 +22,9 @@
              the patch).
     *   (ms) [RT 30899] Color configuration and attribute support 
              added to ScreenColoredLevels appender by Jason Kohles.
+    *   (ms) [RT 28987] If UNIVERSAL is available, appender existence is
+             now verified by checking can() on the appender's new() 
+             method (applied modified patch by Gabriel Berriz).
 
 1.24 (2009/07/08)
     *   (ms) Fixed bug with Log::Log4perl::Util::tmpfile_name which 
